--- a/exec/포팅매뉴얼.md
+++ b/exec/포팅매뉴얼.md
@@ -782,7 +782,7 @@ ENTRYPOINT ["java","-jar","/eureka_img.jar"]
 ## :four: 시연 시나리오
 
 ### - 메인 화면
-<img src="/exec/img/메인화면.png"
+<img src="/exec/img/메인화면.png">
 
 ### - 로그인 화면 (개인)
 ![image](/uploads/3dc4da8b127c1c4e1db8ab01e67face9/image.png)
