--- a/exec/포팅매뉴얼.md
+++ b/exec/포팅매뉴얼.md
@@ -785,104 +785,103 @@ ENTRYPOINT ["java","-jar","/eureka_img.jar"]
 <img src="/exec/img/메인화면.png">
 
 ### - 로그인 화면 (개인)
-![image](/uploads/3dc4da8b127c1c4e1db8ab01e67face9/image.png)
+<img src="/exec/img/로그인화면_개인.png">
 
 ### - 로그인 화면 (기업)
-![image](/uploads/fe6af3f4d0d82e5a4ee634a193ef1362/image.png)
+<img src="/exec/img/로그인화면_기업.png">
 
 ### - 마이페이지 (내 정보)
-![image](/uploads/8bad20f4e19c38833bdebb4f99e65355/image.png)
+<img src="/exec/img/마이페이지_내정보_1.png">
 
-![image](/uploads/352723f7261bb656296b74031b9f445b/image.png)
+<img src="/exec/img/마이페이지_내정보_2.png">
 
 ### - 마이페이지 (내 작품)
-![jak](/uploads/b37f0c4c35fc1a7b267db37e022739c6/jak.png)
+<img src="/exec/img/마이페이지_내작품.png">
 
 ### - 마이페이지 (이력서)
-![resume](/uploads/12fb422f7b2ca7cfdbc59801858d5d7d/resume.png)
+<img src="/exec/img/마이페이지_이력서_1.png">
 
-![image](/uploads/35c54278b431aed7713dafc1d5c95a2d/image.png)
+<img src="/exec/img/마이페이지_이력서_2.png">
 
-![image](/uploads/de3d4e924c2cff48d763ab5b542e6e29/image.png)
+<img src="/exec/img/마이페이지_이력서_3.png">
 
-![image](/uploads/ed5ed5efc851724943ae67b6d2fb412e/image.png)
+<img src="/exec/img/마이페이지_이력서_4.png">
 
-![image](/uploads/3842a9d9c5c96bdde7aea271e2d2dac4/image.png)
+<img src="/exec/img/마이페이지_이력서_5.png">
 
 ### - 마이페이지 (포트폴리오)
-![pofol](/uploads/3c334edb5fed32ab182b7eca30b18927/pofol.png)
+<img src="/exec/img/마이페이지_포트폴리오_1.png">
 
-![image](/uploads/48a85f772586effb896281b7f7a885e8/image.png)
+<img src="/exec/img/마이페이지_포트폴리오_.png">
 
 ### - 마이페이지 (크루 모집 게시글)
-![image](/uploads/f78156ca4a598fc6904187fb4b358622/image.png)
+<img src="/exec/img/마이페이지_크루모집.png">
 
 ### - 커뮤니티 메인 화면
-![image](/uploads/b72487f16016724c3d706b18407b59f6/image.png)
+<img src="/exec/img/커뮤니티메인.png">
 
 ### - 자유게시판
+<img src="/exec/img/자유게시판_1.png">
 
-![image](/uploads/758592b88711adc5341ae755e4ae4123/image.png)
+<img src="/exec/img/자유게시판_2.png">
 
-![image](/uploads/64c6a5637f488ada4f182b006833a60a/image.png)
-
-![image](/uploads/e3bfdca6e2710e09c7eb58aadf669feb/image.png)
+<img src="/exec/img/자유게시판_3.png">
 
 ### - 그림 공유 게시판
-![image](/uploads/d0414067517bf1f6141bfb629c576285/image.png)
+<img src="/exec/img/그림공유_1.png">
 
-![image](/uploads/baf1c375bca2e263247558b7f6ba44bc/image.png)
+<img src="/exec/img/그림공유_2.png">
 
-![image](/uploads/acd6992def5433d217152df7fe9dd80b/image.png)
+<img src="/exec/img/그림공유_3.png">
 
 ### - 크루 모집 게시판
-![image](/uploads/cc0f167e5346d3b457cecbe0c53f4f49/image.png)
+<img src="/exec/img/크루모집_1.png">
 
-![image](/uploads/ce70439ae7c26edcd7f2dfc31881a0ef/image.png)
+<img src="/exec/img/크루모집_2.png">
 
-![image](/uploads/0955bd40ec4942b4893b46d733a363cb/image.png)
+<img src="/exec/img/크루모집_3.png">
 
-![image](/uploads/0ca4f275f4e224c6bc783f28065dba67/image.png)
+<img src="/exec/img/크루모집_4.png">
 
-![image](/uploads/4a2549927b2fc609d2930c68fb650cc6/image.png)
+<img src="/exec/img/크루모집_5.png">
 
-![image](/uploads/1a92fee9f6db955caf509d1fd52565a7/image.png)
+<img src="/exec/img/크루모집_6.png">
 
 ### - NFT 마켓
 
-![image](/uploads/ff5764e15b42891eae79921370f931bf/image.png)
+<img src="/exec/img/NFT마켓.png">
 
 
 
 ## :five: 산출물
 
 ### - 시스템 아키텍쳐
-![image](/uploads/43899b98e010527cce0d3db456d0dbfa/image.png)
+<img src="/exec/img/시스템아키텍처.png">
 
-### - erd 
-![image](/uploads/9f219bde29591d29c827402f833e8aba/image.png)
+### - ERD 
+<img src="/exec/img/ERD.png">
 
 ### - API 명세서
-![image](/uploads/274371294a260d4cd4ac8b4818ce3af8/image.png)
+<img src="/exec/img/API_1.png">
 
-![image](/uploads/09acd296636eadff044c687b6a097071/image.png)
+<img src="/exec/img/API_2.png">
 
-![image](/uploads/6edc7822345badda91428b25942bf8f8/image.png)
+<img src="/exec/img/API_3.png">
 
-![image](/uploads/75807c04f8cf250a85858d4a6254cdb6/image.png)
+<img src="/exec/img/API_4.png">
 
-![image](/uploads/ac40dda7569c8441a5c4ea408b478230/image.png)
+<img src="/exec/img/API_5.png">
 
-![image](/uploads/3604e3486e7cda04c1671fb8867048d8/image.png)
+<img src="/exec/img/API_6.png">
 
-![image](/uploads/c1eab710e37d7f36d0c044c1e4231bb7/image.png)
+<img src="/exec/img/API_7.png">
 
 ### - 기능 명세서
-![image](/uploads/fbcf6738acfd3acd39dd6a3b62efb49f/image.png)
+<img src="/exec/img/기능명세서_1.png">
 
-![image](/uploads/ed5bd3daaba286c945a46f6fe8ff88de/image.png)
+<img src="/exec/img/기능명세서_2.png">
 
-![image](/uploads/571b2247dff7bb04b8655ea9e5a8cd32/image.png)
+<img src="/exec/img/기능명세서_3.png">
 
-![image](/uploads/31868b1314dbafd77eb1aa7df657d968/image.png)
+<img src="/exec/img/기능명세서_4.png">
 
